@@ -1,10 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.414 2005/10/09 21:51:29 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.415 2005/10/12 02:02:51 codeman Exp $
 
 *GLI-0.3 (5 Oct 2005)
 
+  11 Oct 2005; Preston Cody <codeman@gentoo.org>
+  updated webgli with preliminary Network Mounts support.
+  
   9 Oct 2005; Preston Cody <codeman@gentoo.org>
   GenDialog: string formatting and yes/no label fixes.
   added WebGLI template for gliserv.py
